# Echo

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
lib/bot/: bot.cpp  bot.hpp  logininfo.hpp
lib/connect/: connect.cpp  connect.hpp
lib/manager/: manager.cpp  manager.hpp
lib/packet/: packet.cpp  packet.hpp  packetStruct.hpp
lib/utils/: hash.hpp  proton.hpp  random.hpp  textparse.hpp  variant.hpp  vector.hpp
